nueva tarea implementada por consola. Hay que almacenarla en array

--- a/css/style.css
+++ b/css/style.css
@@ -18,3 +18,15 @@ header div :nth-child(2)>input {
 footer {
     color: white;
 }
+
+.urgente {
+    background-color: tomato;
+}
+
+.diario {
+    background-color: aqua;
+}
+
+.mensual {
+    background-color: lightgreen;
+}
