--- a/css/style.css
+++ b/css/style.css
@@ -19,14 +19,26 @@ footer {
     color: white;
 }
 
-.urgente {
+.URGENTE {
     background-color: tomato;
+    width: 400px;
+    height: 150px;
 }
 
-.diario {
+.Diaria {
     background-color: aqua;
+    width: 400px;
+    height: 150px;
 }
 
-.mensual {
+.Mensual {
     background-color: lightgreen;
+    width: 400px;
+    height: 150px;
+}
+
+.delete {
+    background-color: red;
+    width: 120px;
+    height: 80px;
 }
